--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 <body>
 
     <h1>Aprendendo Java Script </h1>
-    <p id = "texto"></p>
-    <p>
+    
+    <!--<p>
         <script>
             document.write("Oi, escrito com o document.write");
         </script>
-    </p>
+    </p>-->
+    <p id = "texto"></p>
+
+    <button onclick = "helloword()"> clique aqui</button>
+
     <script src = "js/index.js">
     </script>
 
