Add object manipulation and methods to index.js; update index.html for new elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </script>
     </p>-->
     <p id = "texto"></p>
-
+    <p id = "texto2"></p>
+    <p id = "texto3"></p>
+    
     <button onclick = "helloword()"> clique aqui</button>
 
     <script src = "js/index.js">
