--- a/index.html
+++ b/index.html
@@ -22,9 +22,22 @@
     <p id = "texto"></p>
     <p id = "texto2"></p>
     <p id = "texto3"></p>
+    <p id = "texto4"></p>
+    <p id = "texto5"></p>
+    <p id = "texto6"></p>
+    <p id = "texto7"></p>
+
+
+
     
     <button onclick = "helloword()"> clique aqui</button>
+    <button onclick = "eventoClick()">Mude a cor ("onclick")</button>
+    <button ondblclick="eventoDBLclick()">Mude a cor("ondblclick")</button>
+    
+    <div onmousedown = "clicou()" onmouseup="soltouClique()" style="margin:auto auto; width: 80%; height: 200px; background:rgb(0, 0, 0);"> O que isso faz? </div>
 
+
+    <div id = "teste"  onmousemove="moveMouse()" onmouseout = "viraAzul()" onmouseover="viraVermelho()" style="margin:auto auto; width: 80%; height: 200px; background:blue;"></div>
     <script src = "js/index.js">
     </script>
 
