Add comments to alert, confirm, and prompt functions in ex001.html for clarity

--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -20,9 +20,10 @@
     olá Mundo!!
     <p>Ja me livrei da maldicao!</p> <!--Paragrafos!-->
     <script>
-        window.alert('Minha primeira mensagem');
-        window.confirm('Esta gostando de javascript?')
-        window.prompt('Qual é seu nome? ')
+        window.alert('Minha primeira mensagem'); //alerta uma mensagem
+        window.confirm('Esta gostando de javascript?')//janela com botao ok ou cancelar
+        window.prompt('Qual é seu nome? ') //janela perguntando o nome
+        
     </script>
 </body>
 </html>
